--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
+                <ul class="navbar-nav ml-auto" style="margin-top: 25px;margin-right: 40px;">
 
                     <li class="nav-item" style="padding: 0 17px 0;">
-                        <a class="nav-link" href="#">Experience</a>
+                        <a style="font-weight: 500;color: black;font-family: 'Poppins', sans-serif;" class="nav-link" href="#experience">Experience</a>
                     </li>
                     <li class="nav-item" style="padding: 0 17px 0;">
-                        <a class="nav-link" href="#">Work</a>
+                        <a style="font-weight: 500;color: black;font-family: 'Poppins', sans-serif;" class="nav-link" href="#work">Work</a>
                     </li>
                     <li class="nav-item" style="padding: 0 17px 0;">
-                        <a class="nav-link" href="#">Connect</a>
+                        <a style="font-weight: 500;color: black;font-family: 'Poppins', sans-serif;" class="nav-link" href="#contact">Contact</a>
                     </li>
 
                 </ul>
@@ -80,7 +80,7 @@
     </section>
 
     <section id="experience" class="experience">
-        <h1>Experience</h1>
+        <h1 style="margin-top: 40px;">Experience</h1>
         <div class="container">
             <div class="row" style="margin-right: 0;">
 
@@ -135,7 +135,7 @@
     <!-- ==================================================== -->
     <section id="work" class="work">
 
-        <h1>Work</h1>
+        <h1 style="margin-top: 170px;margin-bottom: 100px;">Work</h1>
         <h2>Completed Designs<h2></h2>
             <div class="wrapper">
                 <div class="carousel">
@@ -158,7 +158,7 @@
             <br>
             <br>
             <h2>Graphic Design</h2>
-            <div class="graphic">
+            <div class="graphic" style="text-align: center;">
                 <div class="graphic-designs">
                     <img src="farce.png" alt="">
                     <img src="book.png" alt="">
@@ -175,7 +175,7 @@
 
         <div class="container">
             <div class=" flox">
-                <div style="text-align: right;padding-top: 160px;">
+                <div style="text-align: center;padding-top: 160px;">
                     <h6>Developed By Rohan Biswas</h6>
                     <a href="https://www.linkedin.com/in/rohan-biswas-178848239/"><i
                             class="fa-brands fa-linkedin"></i></a>
@@ -183,10 +183,10 @@
                 </div>
 
                 <div class="us" style="text-align: center;">
-                    <img style="width: 75%;" src="us.png" alt="">
+                    <img style="width: 83%;" src="us.png" alt="">
                 </div>
 
-                <div style="text-align: left;padding-top: 170px;">
+                <div style="text-align: center;padding-top: 160px;">
                     <h6>Designed By Monjima Lahiri</h6>
                     <a href="https://www.behance.net/monjimalahiri"><i class="fa-brands fa-square-behance"></i></a>
                     <a href="https://www.linkedin.com/in/monjima-lahiri-935856200/"><i
