--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </section>
 
     <section id="experience" class="experience">
-        <h1 style="margin-top: 40px;">Experience</h1>
+        <h1 style="margin-top: 100px;">Experience</h1>
         <div class="container">
             <div class="row" style="margin-right: 0;">
 
@@ -151,14 +151,14 @@
             </div>
             <br>
             <br>
-            <h2>Project in Progress</h2>
+            <h2 style="margin-bottom: 65px;">Project in Progress</h2>
             <div class="shecan">
 
                 <img src="shecan.png" alt="">
             </div>
             <br>
             <br>
-            <h2>Graphic Design</h2>
+            <h2  style="margin-top: 70px";>Graphic Design</h2>
             <div class="graphic" style="text-align: center;">
                 <div class="graphic-designs">
                     <img src="farce.png" alt="">
