--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet"
-        href=https://cdn.jsdelivr.net/jquery.slick/1.5.0/slick-theme.css>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js"
+    <link rel="stylesheet" href=https://cdn.jsdelivr.net/jquery.slick/1.5.0/slick-theme.css> <script
+        src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js"
         integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous">
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/js/bootstrap.min.js"
@@ -44,13 +43,16 @@
                 <ul class="navbar-nav ml-auto" style="margin-top: 25px;margin-right: 40px;">
 
                     <li class="nav-item" style="padding: 0 17px 0;">
-                        <a style="font-weight: 500;color: black;font-family: 'Poppins', sans-serif;" class="nav-link" href="#experience">Experience</a>
+                        <a style="font-weight: 500;color: black;font-family: 'Poppins', sans-serif;" class="nav-link"
+                            href="#experience">Experience</a>
                     </li>
                     <li class="nav-item" style="padding: 0 17px 0;">
-                        <a style="font-weight: 500;color: black;font-family: 'Poppins', sans-serif;" class="nav-link" href="#work">Work</a>
+                        <a style="font-weight: 500;color: black;font-family: 'Poppins', sans-serif;" class="nav-link"
+                            href="#work">Work</a>
                     </li>
                     <li class="nav-item" style="padding: 0 17px 0;">
-                        <a style="font-weight: 500;color: black;font-family: 'Poppins', sans-serif;" class="nav-link" href="#contact">Contact</a>
+                        <a style="font-weight: 500;color: black;font-family: 'Poppins', sans-serif;" class="nav-link"
+                            href="#contact">Contact</a>
                     </li>
 
                 </ul>
@@ -158,12 +160,20 @@
             </div>
             <br>
             <br>
-            <h2  style="margin-top: 70px";>Graphic Design</h2>
+            <h2 style="margin-top: 70px;margin-bottom: 100px;" ;>Graphic Design</h2>
             <div class="graphic" style="text-align: center;">
                 <div class="graphic-designs">
-                    <img src="farce.png" alt="">
-                    <img src="book.png" alt="">
-                    <img src="3d.png" alt="">
+                    <div class="hover01">
+
+                        <img src="farce.png" alt="">
+                        
+                    </div>
+                    <div class="hover01">
+                        <img src="book.png" alt="">
+                    </div>
+                    <div class="hover01">
+                        <img src="3d.png" alt="">
+                    </div>
                 </div>
             </div>
     </section>
