--- a/index.html
+++ b/index.html
@@ -31,26 +31,30 @@
 </head>
 
 <body>
-    <section id="landing-page">
+    <section id="landing-page" >
 
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar fixed-top  navbar-expand-lg navbar-light" style="background-color: #fbe54e;padding-top:0;padding-bottom: 0;" >
             <a class="navbar-brand" href="#"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto" style="margin-top: 25px;margin-right: 40px;">
+                <ul class="navbar-nav ml-auto" style="margin-right: 27px;">
 
-                    <li class="nav-item" style="padding: 0 17px 0;">
+                    <li class="nav-item" style="padding: 0 12px 0;">
+                        <a style="font-weight: 500;color: black;font-family: 'Poppins', sans-serif;" class="nav-link"
+                            href="#landing-page">Home</a>
+                    </li>
+                    <li class="nav-item" style="padding: 0 12px 0;">
                         <a style="font-weight: 500;color: black;font-family: 'Poppins', sans-serif;" class="nav-link"
                             href="#experience">Experience</a>
                     </li>
-                    <li class="nav-item" style="padding: 0 17px 0;">
+                    <li class="nav-item" style="padding: 0 12px 0;">
                         <a style="font-weight: 500;color: black;font-family: 'Poppins', sans-serif;" class="nav-link"
                             href="#work">Work</a>
                     </li>
-                    <li class="nav-item" style="padding: 0 17px 0;">
+                    <li class="nav-item" style="padding: 0 12px 0;">
                         <a style="font-weight: 500;color: black;font-family: 'Poppins', sans-serif;" class="nav-link"
                             href="#contact">Contact</a>
                     </li>
@@ -83,7 +87,7 @@
     </section>
 
     <section id="experience" class="experience">
-        <h1 style="margin-top: 100px;">Experience</h1>
+        <h1 style="margin-top: 85px;margin-bottom: 30px;">Experience</h1>
         <div class="container">
             <div class="row" style="margin-right: 0;">
 
@@ -136,7 +140,7 @@
     </section>
     <!-- ==================================================== -->
     <!-- ==================================================== -->
-    <section id="work" class="work">
+    <section id="work" class="work" >
 
         <h1 style="margin-top: 170px;margin-bottom: 100px;">Work</h1>
         <h2>Completed Designs<h2></h2>
@@ -166,7 +170,7 @@
                     <div class="hover01">
 
                         <img src="farce.png" alt="">
-                        
+
                     </div>
                     <div class="hover01">
                         <img src="book.png" alt="">
@@ -176,10 +180,11 @@
                     </div>
                 </div>
             </div>
+            
     </section>
 
     <section id="contact" class="contact">
-        <h1 style="font-weight: bold;font-size: 3.3rem;">Let's Connect</h1>
+        <h1 style="font-weight: bold;font-size: 3.3rem;padding-top: 300px;padding-bottom: 20px;"">Let's Connect</h1>
         <div class="center">
             <h3>Reach me out at <a href="monjimalahiri@gmail.com">monjimalahiri@gmail.com</a> </h3>
         </div>
