carousel links bind

--- a/index.html
+++ b/index.html
@@ -146,13 +146,13 @@
         <h2>Completed Designs<h2></h2>
             <div class="wrapper">
                 <div class="carousel">
-                    <div><img src="apple.png"></div>
-                    <div><img src="Bank.jpeg"></div>
-                    <div><img src="cycle.jpg"></div>
-                    <div><img src="music.jpg"></div>
-                    <div><img src="store.jpeg"></div>
-                    <div><img src="todo.png"></div>
-
+                    <a href="https://www.behance.net/gallery/155760351/Apple-web-page"><img src="apple.png"></a>
+                    <a href="https://www.behance.net/gallery/155872271/Bank-Card"><img src="Bank.jpeg"></a>
+                    <a href="https://www.behance.net/gallery/153208269/Cycle-Website"><img src="cycle.jpg"></a>
+                    <a href="https://www.behance.net/gallery/153033101/Music-Application"><img src="music.jpg"></a>
+                    <a href="https://www.behance.net/gallery/152785275/Mobile-Store-Application"><img
+                            src="store.jpeg"></a>
+                    <a href="https://www.behance.net/gallery/155760553/To-Do-App"><img src="todo.png"></a>
                 </div>
             </div>
             <br>
