--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
 </head>
 
 <body>
-    <section id="landing-page" >
+    <section id="landing-page">
 
-        <nav class="navbar fixed-top  navbar-expand-lg navbar-light" style="background-color: #fbe54e;padding-top:0;padding-bottom: 0;" >
+        <nav class="navbar fixed-top  navbar-expand-lg navbar-light"
+            style="background-color: #fbe54e;padding-top:0;padding-bottom: 0;">
             <a class="navbar-brand" href="#"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -140,19 +141,18 @@
     </section>
     <!-- ==================================================== -->
     <!-- ==================================================== -->
-    <section id="work" class="work" >
+    <section id="work" class="work">
 
         <h1 style="margin-top: 170px;margin-bottom: 100px;">Work</h1>
         <h2>Completed Designs<h2></h2>
             <div class="wrapper">
                 <div class="carousel">
-                    <a href="https://www.behance.net/gallery/155760351/Apple-web-page"><img src="apple.png"></a>
-                    <a href="https://www.behance.net/gallery/155872271/Bank-Card"><img src="Bank.jpeg"></a>
-                    <a href="https://www.behance.net/gallery/153208269/Cycle-Website"><img src="cycle.jpg"></a>
-                    <a href="https://www.behance.net/gallery/153033101/Music-Application"><img src="music.jpg"></a>
-                    <a href="https://www.behance.net/gallery/152785275/Mobile-Store-Application"><img
-                            src="store.jpeg"></a>
-                    <a href="https://www.behance.net/gallery/155760553/To-Do-App"><img src="todo.png"></a>
+                    <a href="https://www.behance.net/gallery/155760351/Apple-web-page"><img class="apple" src="apple.png"></a>
+                    <a href="https://www.behance.net/gallery/155872271/Bank-Card"><img class="bank" src="Bank.jpeg"></a>
+                    <a href="https://www.behance.net/gallery/153208269/Cycle-Website"><img class="cycle" src="cycle.jpg"></a>
+                    <a href="https://www.behance.net/gallery/153033101/Music-Application"><img class="music" src="music.jpg"></a>
+                    <a href="https://www.behance.net/gallery/152785275/Mobile-Store-Application"><img class="store" src="store.jpeg"></a>
+                    <a href="https://www.behance.net/gallery/155760553/To-Do-App"><img class="todo" src="todo.png"></a>
                 </div>
             </div>
             <br>
@@ -180,41 +180,41 @@
                     </div>
                 </div>
             </div>
-            
+
     </section>
 
     <section id="contact" class="contact">
         <h1 style="font-weight: bold;font-size: 3.3rem;padding-top: 300px;padding-bottom: 20px;"">Let's Connect</h1>
-        <div class="center">
+        <div class=" center">
             <h3>Reach me out at <a href="monjimalahiri@gmail.com">monjimalahiri@gmail.com</a> </h3>
-        </div>
-
-        <div class="container">
-            <div class=" flox">
-                <div style="text-align: center;padding-top: 160px;">
-                    <h6>Developed By Rohan Biswas</h6>
-                    <a href="https://www.linkedin.com/in/rohan-biswas-178848239/"><i
-                            class="fa-brands fa-linkedin"></i></a>
-                    <a href="https://github.com/RohanPranto"><i class="fa-brands fa-square-github"></i></a>
-                </div>
-
-                <div class="us" style="text-align: center;">
-                    <img style="width: 83%;" src="us.png" alt="">
-                </div>
-
-                <div style="text-align: center;padding-top: 160px;">
-                    <h6>Designed By Monjima Lahiri</h6>
-                    <a href="https://www.behance.net/monjimalahiri"><i class="fa-brands fa-square-behance"></i></a>
-                    <a href="https://www.linkedin.com/in/monjima-lahiri-935856200/"><i
-                            class="fa-brands fa-linkedin"></i></a>
-                </div>
             </div>
 
+            <div class="container">
+                <div class=" flox">
+                    <div style="text-align: center;padding-top: 160px;">
+                        <h6>Developed By Rohan Biswas</h6>
+                        <a href="https://www.linkedin.com/in/rohan-biswas-178848239/"><i
+                                class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://github.com/RohanPranto"><i class="fa-brands fa-square-github"></i></a>
+                    </div>
+
+                    <div class="us" style="text-align: center;">
+                        <img style="width: 83%;" src="us.png" alt="">
+                    </div>
+
+                    <div style="text-align: center;padding-top: 160px;">
+                        <h6>Designed By Monjima Lahiri</h6>
+                        <a href="https://www.behance.net/monjimalahiri"><i class="fa-brands fa-square-behance"></i></a>
+                        <a href="https://www.linkedin.com/in/monjima-lahiri-935856200/"><i
+                                class="fa-brands fa-linkedin"></i></a>
+                    </div>
+                </div>
 
 
 
 
-        </div>
+
+            </div>
     </section>
 
 
