--- a/index.html
+++ b/index.html
@@ -167,16 +167,16 @@
             <h2 style="margin-top: 70px;margin-bottom: 100px;" ;>Graphic Design</h2>
             <div class="graphic" style="text-align: center;">
                 <div class="graphic-designs">
-                    <div class="hover01">
+                   <div class="hover01">
 
-                        <img src="farce.png" alt="">
+                        <a href="https://www.behance.net/gallery/157179025/The-Incomplete-Repletion"><img src="farce.png" alt=""></a>
 
                     </div>
                     <div class="hover01">
-                        <img src="book.png" alt="">
+                        <a href="https://www.behance.net/gallery/157185329/Book-Cover-Redesigned"><img src="book.png" alt=""></a>
                     </div>
                     <div class="hover01">
-                        <img src="3d.png" alt="">
+                        <a href="https://www.behance.net/gallery/159483143/3D-M"><img src="3d.png" alt=""></a>
                     </div>
                 </div>
             </div>
