--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </section>
 
     <section id="experience" class="experience">
-        <h1 style="margin-top: 85px;margin-bottom: 30px;">Experience</h1>
+        <h1 style="margin-top: 115px;margin-bottom: 0;">Experience</h1>
         <div class="container">
             <div class="row" style="margin-right: 0;">
 
