--- a/index.html
+++ b/index.html
@@ -34,19 +34,14 @@
     <section id="landing-page">
 
         <nav class="navbar fixed-top  navbar-expand-lg navbar-light"
-            style="background-color: #fbe54e;padding-top:0;padding-bottom: 0;">
-            <a class="navbar-brand" href="#"></a>
+            style="background-color: #fbe54e;padding-top:0;padding-bottom: 0;opacity: 80%;">
+            <a class="navbar-brand" href="#"> <img src="monjima.png" style="width:45%;margin-left: 85px;" alt=""> </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto" style="margin-right: 27px;">
-
-                    <li class="nav-item" style="padding: 0 12px 0;">
-                        <a style="font-weight: 500;color: black;font-family: 'Poppins', sans-serif;" class="nav-link"
-                            href="#landing-page">Home</a>
-                    </li>
+                <ul class="navbar-nav ml-auto" style="margin-right: 70px;">
                     <li class="nav-item" style="padding: 0 12px 0;">
                         <a style="font-weight: 500;color: black;font-family: 'Poppins', sans-serif;" class="nav-link"
                             href="#experience">Experience</a>
@@ -88,7 +83,7 @@
     </section>
 
     <section id="experience" class="experience">
-        <h1 style="margin-top: 115px;margin-bottom: 0;">Experience</h1>
+        <h1 style="padding-top: 150px;margin-bottom: 30px;">Experience</h1>
         <div class="container">
             <div class="row" style="margin-right: 0;">
 
@@ -111,7 +106,7 @@
                         <li>Worked with typography, color themes and design layout in Canva and Adobe Photoshop.</li>
                     </ul>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6" style="padding-left: 35px;">
                     <h4>&nbsp;&nbsp;&nbsp;&nbsp;UI Design Intern @ Analog Digital Solution.</h4>
                     <ul>
                         <li>Collaborated in creating wireframes for mobile application.</li>
@@ -122,17 +117,16 @@
                         <li>Collected valuable resources for use.</li>
                     </ul>
                     <div style="text-align: center;">
-                        <img src="donut.png" alt="donut">
+                        <img style="margin-right: 20px;" src="donut.png" alt="donut"> <br>
+                        <div  class="cv">
+                            <a href="https://drive.google.com/file/d/1fy_iaKSd-c5FeEjU2Yy7zhdAPk0RDoIb/view?usp=drivesdk">Download
+                                Resume</a>
+                                <img src="star.png" alt="">
+                                <img src="star.png"
+                                    style="position:relative;width: 4%;height: 4%;left: -70;right: 178px;bottom: 0px;top: 2px;"
+                                    alt="">
+                        </div>
                     </div>
-                    <div class="cv">
-                        <a href="https://drive.google.com/file/d/1fy_iaKSd-c5FeEjU2Yy7zhdAPk0RDoIb/view?usp=drivesdk">Download
-                            Resume</a>
-                        <img src="star.png" alt="">
-                        <img src="star.png"
-                            style="position:relative;width: 4%;height: 4%;left: -70;right: 175px;bottom: 0px;top: 2px;"
-                            alt="">
-                    </div>
-
                 </div>
             </div>
 
@@ -141,9 +135,9 @@
     </section>
     <!-- ==================================================== -->
     <!-- ==================================================== -->
-    <section id="work" class="work">
+    <section id="work" class="work" style="padding-bottom: 50px;">
 
-        <h1 style="margin-top: 170px;margin-bottom: 100px;">Work</h1>
+        <h1 style="margin-top: 100px;margin-bottom: 50px;">Work</h1>
         <h2>Completed Designs<h2></h2>
             <div class="wrapper">
                 <div class="carousel">
@@ -157,17 +151,17 @@
             </div>
             <br>
             <br>
-            <h2 style="margin-bottom: 65px;">Project in Progress</h2>
+            <h2 style="margin-top: 70px;margin-bottom: 65px;">Project in Progress</h2>
             <div class="shecan">
 
                 <img src="shecan.png" alt="">
             </div>
             <br>
             <br>
-            <h2 style="margin-top: 70px;margin-bottom: 100px;" ;>Graphic Design</h2>
+            <h2 style="margin-top: 100px;margin-bottom: 100px;" ;>Graphic Design</h2>
             <div class="graphic" style="text-align: center;">
                 <div class="graphic-designs">
-                   <div class="hover01">
+                    <div class="hover01">
 
                         <a href="https://www.behance.net/gallery/157179025/The-Incomplete-Repletion"><img src="farce.png" alt=""></a>
 
@@ -184,13 +178,17 @@
     </section>
 
     <section id="contact" class="contact">
-        <h1 style="font-weight: bold;font-size: 3.3rem;padding-top: 300px;padding-bottom: 20px;"">Let's Connect</h1>
-        <div class=" center">
-            <h3>Reach me out at <a href="monjimalahiri@gmail.com">monjimalahiri@gmail.com</a> </h3>
-            </div>
+        <div class="cto" style=>
+            <h1 style="font-weight: bold;font-size: 3.3rem;padding-bottom: 20px;">Let's Connect</h1>
+            
+            <div class=" center">
+                <h3>Reach me out at <a href="monjimalahiri@gmail.com">monjimalahiri@gmail.com</a> </h3>
+                </div>
+        </div>
+        
 
             <div class="container">
-                <div class=" flox">
+                <div class=" flox" style="padding-top: 130px">
                     <div style="text-align: center;padding-top: 160px;">
                         <h6>Developed By Rohan Biswas</h6>
                         <a href="https://www.linkedin.com/in/rohan-biswas-178848239/"><i
